--- a/test drag 2/Base.lproj/Main.storyboard
+++ b/test drag 2/Base.lproj/Main.storyboard
@@ -694,22 +694,20 @@
                                 <rect key="frame" x="100" y="100" width="800" height="600"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
-                                    <imageView wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zsx-Zy-Izc">
-                                        <rect key="frame" x="222" y="383" width="32" height="86"/>
+                                    <customView wantsLayer="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9k-em-zEu" userLabel="mic1CustomView" customClass="Mic1CustomView" customModule="test_drag_2" customModuleProvider="target">
+                                        <rect key="frame" x="534" y="36" width="163" height="175"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="microphone_icon_80x80" id="g7f-Es-OcO"/>
-                                    </imageView>
+                                    </customView>
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1uH-1K-B89" userLabel="mic1">
+                                        <rect key="frame" x="20" y="393" width="30" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    </customView>
                                 </subviews>
-                            </customView>
-                            <customView wantsLayer="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9k-em-zEu" userLabel="mic1CustomView" customClass="Mic1CustomView" customModule="test_drag_2" customModuleProvider="target">
-                                <rect key="frame" x="418" y="352" width="163" height="175"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </customView>
                         </subviews>
                     </view>
                     <connections>
-                        <outlet property="mic1LayerView" destination="c9k-em-zEu" id="T3u-ZO-BoO"/>
-                        <outlet property="mic1View" destination="Zsx-Zy-Izc" id="yag-yL-vAj"/>
+                        <outlet property="mic1View" destination="1uH-1K-B89" id="6v9-2Z-Ku3"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -729,7 +727,4 @@
             </objects>
         </scene>
     </scenes>
-    <resources>
-        <image name="microphone_icon_80x80" width="80" height="80"/>
-    </resources>
 </document>
